--- a/index.css
+++ b/index.css
@@ -22,9 +22,9 @@ header h1,
 header h2,
 header h4 {
   font-weight: 700 !important;
-
+  padding-bottom: 20px;
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 header h1 {
   letter-spacing: -2.5px !important;
@@ -41,7 +41,7 @@ header h1 {
 header h2 {
   font-weight: 400 !important;
   letter-spacing: 0 !important;
-  font-size: 1.25rem;
+  font-size: 1.4rem;
   line-height: 30px;
   color: var(--text-light);
 }
@@ -111,4 +111,42 @@ footer img {
   width: 70px;
   margin: 10px 0;
   display: block;
+}
+#iframe-box {
+  width: 100%;
+}
+#iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+#iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+}
+
+/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
+@media (min-width: 768px) {
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  #iframe-box {
+    width: 50vw;
+  }
+  header h1 {
+    font-size: 3.5rem;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
